deployment/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ne
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - args:
            - npm
            - start
          image: nelab/hcm-frontend:latest
          name: web
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "800Mi"
              cpu: "500m"
            limits:
              memory: "800Mi"
              cpu: "500m"
